--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 /**/__pycache__/
 /.idea/
+/bin/phing
+/composer.lock
 /dist/
 /docs/_build/
 /docs/_static/
 /docs/_templates/
+/poetry.lock
+/test/coverage.xml
+/test/html/
+/vendor/
 /venv/
