--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -34,7 +34,8 @@ jobs:
       - name: "Install dependencies"
         run: |
           python -m pip install --upgrade pip
-          pip install .[dev]
+          python -m pip install --upgrade poetry
+          poetry install --no-root
 
       - name: "Run tests with pytest"
         run: |
