--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -33,10 +33,9 @@ jobs:
 
       - name: "Install dependencies"
         run: |
-          python -m venv venv
-          ./venv/bin/python -m pip install --upgrade pip
-          ./venv/bin/python -m pip install --upgrade poetry
-          ./venv/bin/poetry install --no-root
+          python -m pip install --upgrade pip
+          python -m pip install --upgrade poetry
+          poetry install --no-root
 
       - name: "Run tests with pytest"
         run: |
