--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -33,14 +33,17 @@ jobs:
 
       - name: "Install dependencies"
         run: |
-          python -m pip install --upgrade pip
-          python -m pip install --upgrade poetry
-          poetry install --no-root
+          ./venv/bin/python -m pip install --upgrade pip
+          ./venv/bin/python -m pip install --upgrade poetry
+          ./venv/bin/poetry env use ./venv/bin/python
+          ./venv/bin/poetry install --no-root
+          ./venv/bin/poetry env info
 
       - name: "Run tests with pytest"
         run: |
-          python -m coverage run -m unittest discover -s test -p *Test.py
-          python -m coverage xml
+          ./venv/bin/poetry env info
+          ./venv/bin/python -m coverage run -m unittest discover -s test -p *Test.py
+          ./venv/bin/python -m coverage xml
 
       - name: "Upload to Codecov"
         uses: "codecov/codecov-action@v4"
