--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -33,6 +33,7 @@ jobs:
 
       - name: "Install dependencies"
         run: |
+          python -m venv venv
           ./venv/bin/python -m pip install --upgrade pip
           ./venv/bin/python -m pip install --upgrade poetry
           ./venv/bin/poetry env use ./venv/bin/python
