--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -36,6 +36,9 @@ jobs:
           python -m venv venv
           ./venv/bin/python -m pip install --upgrade pip
           ./venv/bin/python -m pip install --upgrade poetry
+
+      - name: "Install dependencies"
+        run: |
           ./venv/bin/poetry env use ./venv/bin/python
           ./venv/bin/poetry install --no-root
           ./venv/bin/poetry env info
