--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -54,8 +54,8 @@ jobs:
 
       - name: "Run tests with pytest"
         run: |
-          ./venv/bin/python -m coverage run -m unittest discover -s test -p *Test.py
-          ./venv/bin/python -m coverage xml
+          ./.venv/bin/python -m coverage run -m unittest discover -s test -p *Test.py
+          ./.venv/bin/python -m coverage xml
 
       - name: "Upload to Codecov"
         uses: "codecov/codecov-action@v4"
