--- a/.github/workflows/unit.yml
+++ b/.github/workflows/unit.yml
@@ -31,28 +31,19 @@ jobs:
       - name: "Display Python version"
         run: "python -c 'import sys; print(sys.version)'"
 
-      - name: "Install dependencies1"
+      - name: "Setup virtual environment"
         run: |
           python -m venv .venv
           ./.venv/bin/python -m pip install --upgrade pip
           ./.venv/bin/python -m pip install --upgrade poetry
 
-      - name: "Install dependencies2a"
-        run: ./.venv/bin/poetry config --list
-
-      - name: "Install dependencies2b"
+      - name: "Configure poetry"
         run: ./.venv/bin/poetry config virtualenvs.in-project true
 
-      - name: "Install dependencies2c"
-        run: ./.venv/bin/poetry config virtualenvs.in-project true
-
-      - name: "Install dependencies3"
+      - name: "Install dependencies"
         run: ./.venv/bin/poetry install --no-root
 
-      - name: "Install dependencies4"
-        run: ./.venv/bin/poetry config --list
-
-      - name: "Run tests with pytest"
+      - name: "Run unit tests"
         run: |
           ./.venv/bin/python -m coverage run -m unittest discover -s test -p *Test.py
           ./.venv/bin/python -m coverage xml
