Setup documentation environment.

--- a/build.xml
+++ b/build.xml
@@ -14,32 +14,32 @@
         <exec executable="python3" checkreturn="true" passthru="true">
             <arg value="-m"/>
             <arg value="venv"/>
-            <arg value="venv"/>
+            <arg value=".venv"/>
         </exec>
-        <exec executable="./venv/bin/python" checkreturn="true" passthru="true">
+        <exec executable="./.venv/bin/python" checkreturn="true" passthru="true">
             <arg value="-m"/>
             <arg value="pip"/>
             <arg value="install"/>
             <arg value="--upgrade"/>
             <arg value="pip"/>
         </exec>
-        <exec executable="./venv/bin/python" checkreturn="true" passthru="true">
+        <exec executable="./.venv/bin/python" checkreturn="true" passthru="true">
             <arg value="-m"/>
             <arg value="pip"/>
             <arg value="install"/>
             <arg value="--upgrade"/>
             <arg value="poetry"/>
         </exec>
-        <exec executable="./venv/bin/poetry" passthru="true" checkreturn="true">
+        <exec executable="./.venv/bin/poetry" passthru="true" checkreturn="true">
             <arg value="--ansi"/>
             <arg value="lock"/>
         </exec>
-        <exec executable="./venv/bin/poetry" passthru="true" checkreturn="true">
+        <exec executable="./.venv/bin/poetry" passthru="true" checkreturn="true">
             <arg value="--ansi"/>
             <arg value="install"/>
             <arg value="--no-root"/>
         </exec>
-        <exec executable="./venv/bin/poetry" passthru="true" checkreturn="true">
+        <exec executable="./.venv/bin/poetry" passthru="true" checkreturn="true">
             <arg value="--ansi"/>
             <arg value="show"/>
             <arg value="--outdated"/>
@@ -84,12 +84,12 @@
 
     <!-- Creates a new distribution using pyproject.toml -->
     <target name="dist">
-        <exec command="./venv/bin/poetry build" passthru="true" checkreturn="true"/>
+        <exec command="./.venv/bin/poetry build" passthru="true" checkreturn="true"/>
     </target>
 
     <!-- Uploads a distribution to PyPI -->
     <target name="upload">
-        <exec command="./venv/bin/poetry publish" passthru="true" checkreturn="true"/>
+        <exec command="./.venv/bin/poetry publish" passthru="true" checkreturn="true"/>
     </target>
 
     <!-- All steps for releasing a new version -->
@@ -97,7 +97,7 @@
 
     <!-- Runs all unit tests-->
     <target name="unit">
-        <exec executable="./venv/bin/python" checkreturn="true" passthru="true">
+        <exec executable="./.venv/bin/python" checkreturn="true" passthru="true">
             <arg value="-m"/>
             <arg value="coverage"/>
             <arg value="run"/>
@@ -109,7 +109,7 @@
             <arg value="-p"/>
             <arg value="\*Test.py"/>
         </exec>
-        <exec executable="./venv/bin/python" checkreturn="true" passthru="true">
+        <exec executable="./.venv/bin/python" checkreturn="true" passthru="true">
             <arg value="-m"/>
             <arg value="coverage"/>
             <arg value="html"/>
@@ -119,6 +119,11 @@
                 <include name="**/*.actual.scad"/>
             </fileset>
         </delete>
+    </target>
+
+    <!-- Generates the documentation -->
+    <target name="docs">
+        <exec command="make html" dir="docs" passthru="true" checkreturn="true"/>
     </target>
 
     <!-- Default target -->
