--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["P.R. Water <p.r.water@setbased.nl>"]
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/SuperSCAD/SuperSCAD"
-documentation = "https://superscad.readthedocs.io/"
+documentation = "http://www.superscad.org/"
 keywords = ["OpenSCAD", "SuperSCAD"]
 classifiers = [
     "Development Status :: 5 - Production/Stable",
